# ppicos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
example_input_output/input/: CH-DAV_iDL_T1_35_1_TBL1_2022_06_30_0000.dat.csv
pp-icos/: README.md  environment.yml  file_formats.py  filesettings.py  html.py  logger.py  main.py  start_10_meteo.py  start_10_meteo_heatflag_sonic.py  start_11_meteo_hut_prec.py  start_12_meteo_forest_floor.py  start_13_meteo_backup_eth.py  start_13_meteo_meteoswiss.py  start_13_meteo_nabel.py  start_15_meteo_snowheight.py  start_17_meteo_profile.py  start_30_ghg_profile.py  start_ALL.py  tools.py
pp-icos/html_templates/: file_overview.html  style.css
ppicos/: filesettings.py  html.py  logger.py  main.py  start_10_meteo.py  start_11_meteo_hut_prec.py  start_13_meteo_meteoswiss.py  start_13_meteo_nabel.py  start_15_meteo_snowheight.py  start_17_meteo_profile.py  start_ALL.py  tools.py
ppicos/html_templates/: file_overview.html
