[tool.poetry]
name = "pp-icos"
version = "v5.0.0"
description = "Format raw data files to ICOS format."
authors = ["holukas <lukas.hoertnagl@usys.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
